fix notes add and screen overflow

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -51,7 +51,7 @@ textarea:focus, input:focus{
 //NOTES --ACA VAN LOS THUMBNAILS
 .notes{
   background-color: salmon;
-  height: 100vh;
+  min-height: 100vh;
   width: 100%
 }
 .thumbnail {
@@ -70,10 +70,13 @@ textarea:focus, input:focus{
   height: 3rem;
   padding: 0;
 }
-.pSample {
-    height:8.4rem;
-    line-height:20px;
-    overflow:hidden;
+.p--shorter {
+  height:8.4rem;
+  line-height:20px;
+  overflow:hidden;
+  word-wrap: break-word;
+  word-break:break-all;
+  overflow-wrap:hyphenate;
 }
 
 //NOTES MODAL--EDITOR DE NOTAS
@@ -466,13 +469,6 @@ textarea:focus, input:focus{
     margin-left: 0px;
     margin-right: 0px;
 }
-
-.row2 {
-    margin-left: 0px;
-    margin-right: 0px;
-    height: 100vh;
-}
-
 .cols {
     padding-left: 0px;
     padding-right: 0px;
